testsuite/tests/checks/numeric_indexing/test.out
num.ads:15:41: error: integer literal as index value
15 |    C1        : constant Integer := Var (1);  --  FLAG
   |                                         ^ 

num.ads:16:41: error: integer literal as index value
16 |    C0        : constant Integer := Var (0);  --  FLAG
   |                                         ^ 

num.ads:17:42: error: integer literal as index value
17 |    C_Minus_1 : constant Integer := Var (-1); --  FLAG
   |                                          ^ 

num.adb:2:25: error: integer literal as index value
2 |     X : Integer := Var (2);      --  FLAG
  |                         ^ 

